syntax = "proto3";

package twitch_action;

service TwitchActionService {
  rpc ExecuteAction (ActionRequest) returns (ActionResponse);
  rpc BatchExecuteActions (BatchActionRequest) returns (BatchActionResponse);
  rpc GetActionStatus (StatusRequest) returns (StatusResponse);
}

message ActionRequest {
  string action_type = 1;  // chat_message, whisper, announcement, etc.
  string broadcaster_id = 2;
  map<string, string> parameters = 3;
  string request_id = 4;
  int64 timestamp = 5;
}

message ActionResponse {
  bool success = 1;
  string message = 2;
  string action_id = 3;
  map<string, string> result_data = 4;
  string error = 5;
}

message BatchActionRequest {
  repeated ActionRequest actions = 1;
}

message BatchActionResponse {
  repeated ActionResponse responses = 1;
  int32 total_count = 2;
  int32 success_count = 3;
  int32 failure_count = 4;
}

message StatusRequest {
  string action_id = 1;
}

message StatusResponse {
  string action_id = 1;
  string status = 2;
  string message = 3;
  map<string, string> metadata = 4;
}
